Criado um h1 e um parágrafo referentes ao que está sendo aprendido

--- a/auladia19.html
+++ b/auladia19.html
@@ -6,6 +6,9 @@
     <title>Aula dia 19/04</title>
 </head>
 <body>
+
+    <h1>Olá Git Hub</h1>
+    <p>Estou aprendendo a sincronizar o Visual Studio Code ao GitHub</p>
     
 </body>
 </html>
