Alterações nos arquivos, adicionando redirecionamento entre as páginas

--- a/desafioreceita.html
+++ b/desafioreceita.html
@@ -6,6 +6,16 @@
     <title>Receita da Vó Olga</title>
 </head>
 <body>
+    <ul>
+        <a href="index.html"><li>HOME</li></a>
+        <a href="aulaimagens.html"><li>Aula de imagens</li></a>
+        <a href="tabelas.html"><li>Aula de tabelas</li></a>
+        <a href="listaordenada.html"><li>Aula de Lista Ordenada</li></a>
+        <a href="listanaoordenada.html"><li>Aula de Listas não Ordenadas</li></a>
+        <a href="auladia19.html"><li>Aula 19: Aprendendo a sincronizar o GitHub</li></a>
+
+    </ul>
+
     <h1>Cuscuz da Vó Olga</h1>
 
     <ol>
@@ -68,6 +78,9 @@
     
  
     <p>Serve muita gente</p>
+
+
+
 
 </body>
 </html>
