--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aula dia 19/04</title>
+    <title>Redirecionamento</title>
 </head>
 <body>
 
     <ul>
-        <a href="index.html"><li>HOME</li></a>
         <a href="aulaimagens.html"><li>Aula de imagens</li></a>
         <a href="tabelas.html"><li>Aula de tabelas</li></a>
         <a href="listaordenada.html"><li>Aula de Lista Ordenada</li></a>
         <a href="listanaoordenada.html"><li>Aula de Listas não Ordenadas</li></a>
         <a href="desafioreceita.html"><li>Desafio da Receita da Vó Olga</li></a>
+        <a href="auladia19.html"><li>Aula 19: Aprendendo a sincronizar o GitHub</li></a>
 
     </ul>
+
+
+
+
     
-
-    <h1>Olá Git Hub</h1>
-    <p>Estou aprendendo a sincronizar o Visual Studio Code ao GitHub</p>
-
-
 </body>
 </html>
