--- a/tabelas.html
+++ b/tabelas.html
@@ -6,6 +6,16 @@
     <title>Document</title>
 </head>
 <body>
+    <ul>
+        <a href="index.html"><li>HOME</li></a>
+        <a href="aulaimagens.html"><li>Aula de imagens</li></a>
+        <a href="listaordenada.html"><li>Aula de Lista Ordenada</li></a>
+        <a href="listanaoordenada.html"><li>Aula de Listas não Ordenadas</li></a>
+        <a href="desafioreceita.html"><li>Desafio da Receita da Vó Olga</li></a>
+        <a href="auladia19.html"><li>Aula 19: Aprendendo a sincronizar o GitHub</li></a>
+
+    </ul>
+
     <h1> Trabalhando com Tabelas</h1>
 
     <table border="1">
