--- a/listaordenada.html
+++ b/listaordenada.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 
+    <ul>
+        <a href="index.html"><li>HOME</li></a>
+        <a href="aulaimagens.html"><li>Aula de imagens</li></a>
+        <a href="tabelas.html"><li>Aula de tabelas</li></a>
+        <a href="listanaoordenada.html"><li>Aula de Listas não Ordenadas</li></a>
+        <a href="desafioreceita.html"><li>Desafio da Receita da Vó Olga</li></a>
+        <a href="auladia19.html"><li>Aula 19: Aprendendo a sincronizar o GitHub</li></a>
+
+    </ul>
+
     <h1 style="font-style: italic;">LISTA ORDENADA</h1>
 
     <!-- <ol> ordered list/ -->
