Alteração nos arquivos relacionados as aulas de CSS

--- a/auladia22parte2.html
+++ b/auladia22parte2.html
@@ -12,14 +12,36 @@
             body {
                 background-color: black;
             }
+
+            p  {
+                color: aliceblue;
+
+
+
+
+            }
+
+            #destaque{
+                color: red;
+            }
+
+            .textoprincipal{
+                width: 80%;
+            }
+
+
+
+
+
+
         </style>
 
 
 
     <div style="color: aquamarine;">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem earum quia esse omnis tempora sit neque perferendis ex aperiam, non unde facilis. Architecto facere placeat voluptatem, nisi voluptatum velit porro.</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque magnam omnis nisi quis ipsa explicabo ipsam, ea praesentium incidunt. Exercitationem commodi, rem veritatis quod nam vel maxime maiores eveniet. Ducimus.</p>
-<p style="color: blueviolet;"></p>
+<p class="textoprincipal">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem earum quia esse omnis tempora sit neque perferendis ex aperiam, non unde facilis. Architecto facere placeat voluptatem, nisi voluptatum velit porro.</p>
+<p class="textoprincipal">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque magnam omnis nisi quis ipsa explicabo ipsam, ea praesentium incidunt. Exercitationem commodi, rem veritatis quod nam vel maxime maiores eveniet. Ducimus.</p>
+<p id="destaque">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor, dicta expedita. Accusamus ab possimus animi tempora. Libero, illo rerum vel quibusdam sunt quae corporis ullam eos ducimus ratione voluptatibus ea.</p>
     </div>
 
 
