--- a/projetopetshop/curiosidades.html
+++ b/projetopetshop/curiosidades.html
@@ -1,60 +1,303 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=charset">
-    <title>Curiosidades - Meu Amigo Cão</title>
-    <link rel="stylesheet" href="estilo.css" type="text/css">
+﻿<!doctype html>
 
-    <!-- Neste CSS interno colocamos uma imagem de fundo (background) que se repetee ao longo de toda a área do h2 a partir do Centro com o comando Center -->
+<html lang="pt-br">
+
+
+<head> 
+
+<meta charset="utf-8">
+
+<title>Meu amigo cão - Petshop</title>
 
 <style>
     h2{
         background-color: #c0262c;
-        background-image: url(multimidia/back-bolinha.gif);
-        background-repeat: repeat;
-        background-position: center center;
+        background-image: url(multimidia/importante-saber.jpg), url(multimidia/back-bolinha.gif);
+        background-repeat: no-repeat, repeat;
+        background-position: center right, center center;
         color: #FFFFFF;
+        font-size: 2.5em;
+        letter-spacing: .1em;
+
+        width: 470px;
+        padding: 61px 400px 61px 100px;
+    }
+
+    figcaption{
+        background-color: #c0262c;
+        padding: 7px 0;
+        color: #FFFFFF;
+        font-size: 1.5em;
+    }
+
+    figure{
+        border: #c0262c solid thin;
+        border-radius: 35px 35px 0 0;
+        padding: 20px 0 0;
+        text-align: center;
+    }
+
+    ul li{
+        list-style-type: none;
+        list-style-image: url(multimidia/ossinho.png);
+        list-style-position: inside;
+        margin: 30px 0;
+    }
+
+    dt {
+        color: #fff;
+        background-color: #c0262c;
+        padding: 7px;
+
     }
 
 
+    dd{
+        border: thin #c0262c solid;
+        border-radius: 0 0 25px 25px;
+        margin-top: -3px;
+        margin-bottom: 30px;
+        padding: 20px 20px 0;
+    }
 
-</style>
+    ol{
+        list-style-type: none;
+        white-space: pre;
+        line-height: .9em;
+        counter-reset: contador;
+    }
+
+    ol li:before{
+        color: #999999;
+        counter-increment: contador;
+        content: "Questão " counter(contador)": ";
+
+    }
+
+    ul li a{
+        text-decoration: none;
+        color: #c0262c;
+        font-weight: bold;
+        padding: 7px;
+
+    }
+
+    ul li a:hover{
+        text-decoration: underline;
+    }
+
+    dd a[target="_blank"]{
+    text-decoration: none;
+    color: #c0262c;
+    font-weight: bold;
+    padding: 7px;
+    display: inline-block;
+
+
+    }
+
+    dd a[target="_blank"]:hover{
+
+        text-decoration: underline;
+    }
+
+    dd a[href="#top"]{
+
+        text-decoration: none;
+        color: #c0262c;
+        font-weight: bold;
+        padding: 7px 0 7px 30px;
+        background: url(multimidia/seta-voltar.png) no-repeat left center;
+    }
+
+    dd a[href="#top"]:hover{
+
+        text-decoration: underline;
+        background: url(multimidia/seta-voltar-hover.png) no-repeat left center;
+    }
+
+    h1{
+        color: #c0262c;
+        font-size: 2.5em;
+        border-bottom: #c0262c solid thin;
+        padding-bottom: 7px;
+    }
+
+    </style>
 
 </head>
+
+
+
 <body>
-    <a href="index.html">HOME</a>
 
-    <h1>Qual a melhor raça de cachorro para crianças</h1>
-    <h2>Antes de mais nada é importante que tenha em mente uma resposta para as seguintes questões:</h2>
 
-    <ol>
-        <li>Mora em casa ou apartamento?</li>
-        <li>Quer um cachorro para ser parceiro em atividades? Brincar? Terapias?</li>
-        <li>Você mora no campo ou na cidade?</li>
-        <li>Alguém da familia é alérgico a cães?</li>
-        <li>Está disposto a cuidar do cão com frequência?</li>
-        <li>É rigido com limpeza?</li>
-        <li>É preocupado com bagunça?</li>
+<a href="index.html">Home</a>
 
-        <figure>
-            <img src="multimidia/bolinha.JPG" alt="Brincando com a bolinha"> <br>
-            <img src="multimidia/esquentar-pes.JPG" alt="Esquentando os pés">
-            <figcaption>Para brincar ou esquentar seus pés</figcaption>
-        </figure>
+<h1>
+Qual a melhor raça de cachorros para crianças?
+</h1>
 
-    </ol>
 
-    <a id="top"></a><h3>Veja algumas raças</h3>
+<h2>
+Antes de mais nada é importante que você tenha em mente a resposta para algumas questões:
+</h2>
 
-    <ul>
-        <li><a href="#bulldog">Bulldog</a></li>
-        <li><a href="#beagle">Beagle</a></li>
-        <li><a href="#bullterrier">Bull Terrier</a></li>
-        <li><a href="#collie">Collie</a></li>
-        <li><a href="#lhasa">Lhasa Apso</a></li>
-    </ul>
-    
-    <dl></dl>
+
+
+<ol>
+
+<li>Mora em casa ou apartamento?</li>
+
+<li>Quer um cachorro para ser parceiro em atividades? Brincar? Terapia?</li>
+
+<li>Você mora no campo ou na cidade? </li>
+
+<li>Alguém da família é alérgico a cães? </li>
+
+<li>Está disposto a cuidar do cão com frequência? </li>
+
+<li>É rígido com limpeza?</li>
+
+<li>Fica preocupado com bagunça?</li>
+
+</ol>
+
+
+
+
+
+<figure>
+
+<img src="multimidia/bolinha.JPG" alt="brincando com a bolinha"> 
+<img src="multimidia/esquentar-pes.JPG" alt="esquentando os pés">
+
+<figcaption> Para brincar ou esquentar os seus pés</figcaption>
+
+</figure>
+
+
+<a id="top"></a> <h3> Veja algumas raças:</h3>
+
+
+<ul>
+
+<li><a href="#bulldog">Bulldog</a></li>
+
+<li><a href="#beagle">Beagle</a></li>
+
+<li><a href="#bullterrier">Bull Terrier</a></li>
+
+<li><a href="#collie">Collie</a></li>
+
+<li><a href="#labrador">Labrador</a></li>
+
+<li><a href="#lhasa">Lhasa Apso</a></li>
+</ul>
+
+
+
+
+
+<dl>
+
+
+<dt><a id="bulldog"></a>Bulldog</dt>
+
+<dd>
+
+Embora a aparência do Bulldog Inglês pode ser um pouco intimidante, está entre o mais gentil dos cães. Apenas o mesmo que vai ver fora qualquer intruso, e poucos arriscariam um encontro próximo com um cão corajoso o suficiente para atrair um touro. É descrito como um animal muito carinhoso e confiável, gentil com as crianças, mas conhecido por sua coragem e suas excelentes habilidades de guarda.
+
+<br>
+
+
+<a href="https://pt.wikipedia.org/wiki/Bulldog" target="_blank"> Tenha mais informações </a>
+
+<p> <a href="#top"> Voltar </a> </p>
+</dd>
+
+
+
+<dt><a id="beagle"></a>Beagle</dt>
+
+<dd>
+O Beagle é amoroso, doce e gentil, feliz de ver todos, cumprimentá-los com uma cauda abanando. É sociável, corajoso e inteligente. O Beagle é excelente com crianças e geralmente bem com outros cães, mas por causa de seus instintos de caça, não deve ser confiado com animais de estimação não-caninos, a não ser socializados com gatos e outros animais domésticos quando jovens
+
+<br>
+
+
+<a href="https://pt.wikipedia.org/wiki/Beagle" target="_blank">Tenha mais informações<a>
+
+<p> <a href="#top"> Voltar </a> </p>
+
+</dd>
+
+
+
+<dt><a id="bullterrier"></a>Bull Terrier</dt>
+
+<dd>
+Antigamente esta raça era considerada um gladiador feroz, agora é vista como um cão dócil. O Bull terrier pode ter um efeito preventivo e pode defender seu dono em uma situação verdadeiramente crítica, mas não é criado para ser um cão de guarda. Corajoso, desconexo, divertido, carinhoso, ativo, palhaço e destemido, o Bull Terrier é um cão educado, obediente e leal. Ele se torna muito ligado aos seus donos.
+
+<br>
+
+
+<a href="https://pt.wikipedia.org/wiki/Bull_terrier" target="_blank">Tenha mais informações</a>
+
+<p> <a href="#top"> Voltar </a> </p>
+
+
+
+</dd>
+
+
+<dt><a id="collie"></a>Collie</dt>
+
+<dd>
+O Collie é um cão muito inteligente. Sensível, meigo, doce, fácil de treinar e leal, é geralmente bom com outros animais de estimação e amigável com outros cães. Eles são pastores naturais; filhotes podem tentar os humanos rebanho, e precisam ser ensinados a não fazer isso. Fiel, brincalhão, dócil e protetora de seus familiares e bom com crianças
+
+<br>
+
+
+<a href="https://pt.wikipedia.org/wiki/Rough_Collie" target="_blank">Tenha mais informações</a>
+
+<p> <a href="#top"> Voltar </a> </p>
+
+</dd>
+
+
+
+<dt><a id="labrador"></a>Labrador</dt>
+
+<dd>
+Uma das raças mais populares nos EUA, o Labrador é leal, amoroso, carinhoso e paciente, fazendo com que um cão grande da família. Muito inteligente, bem-humorada, muito disposto e ansioso para agradar, ela está entre as melhores opções para o trabalho de cão de serviço. Labs gostam de jogar, especialmente em água, nunca querer deixar passar a oportunidade para um bom mergulho. Estes cães vivos têm uma excelente temperamento, confiável e amigável, excelente com crianças e uniforme com outros cães.
+
+<br>
+
+
+<a href="http://pt.wikipedia.org/wiki/Labrador_retriever" target="_blank">Tenha mais informações</a>
+
+<p> <a href="#top"> Voltar </a> </p>
+
+</dd>
+
+
+
+<dt><a id="lhasa"></a>Lhasa</dt>
+
+<dd>
+Este é um cão resistente com uma maneira amigável, assertivo. Inteligente e animada, faz um bom animal de estimação. Lhasa Apso são pequenos cães espirituoso e dedicados que são afetuoso com seus donos. Eles podem ser muito obediente a seus mestres. Esta raça responde ao treinamento motivacional. Eles têm um grande senso de audição, e fazer bons cães de guarda. O Lhasa Apso viaja bem. Infelizmente, este pequeno cão, muitas vezes cai em Síndrome de cão pequeno , um comportamento humano induzido onde o cão pensa que é líder do bloco para os seres humanos. Isso faz com que muitos graus variados de comportamentos negativos para sair no cão. Tornam-se desconfiado com estranhos, e n
+ão pode tolerar crianças
+
+<br>
+
+<a href="http://pt.wikipedia.org/wiki/Lhasa_apso" target="_blank">Tenha mais informações</a>
+
+<p> <a href="#top"> Voltar </a> </p>
+
+</dd>
+</dl>
+
 </body>
+
 </html>
