--- a/projetopetshop/boletim.html
+++ b/projetopetshop/boletim.html
@@ -7,10 +7,12 @@
 <meta charset="utf-8">
 
 <title>Boletim Mensal - Meu amigo cão</title>
+<link href="estilo.css" rel="stylesheet" type="text/css">
+
 
 </head>
 
-<body>
+<body id="boletim-f">
 
 <h1>Meu amigo cão - Petshop</h1>
 
