--- a/projetopetshop/curiosidades.html
+++ b/projetopetshop/curiosidades.html
@@ -9,8 +9,12 @@
 
 <title>Meu amigo cão - Petshop</title>
 
+
+
 <style>
-    h2{
+
+
+#curiosidades h2{
         background-color: #c0262c;
         background-image: url(multimidia/importante-saber.jpg), url(multimidia/back-bolinha.gif);
         background-repeat: no-repeat, repeat;
@@ -23,28 +27,28 @@
         padding: 61px 400px 61px 100px;
     }
 
-    figcaption{
+    #curiosidades figcaption{
         background-color: #c0262c;
         padding: 7px 0;
         color: #FFFFFF;
         font-size: 1.5em;
     }
 
-    figure{
+    #curiosidades figure{
         border: #c0262c solid thin;
         border-radius: 35px 35px 0 0;
         padding: 20px 0 0;
         text-align: center;
     }
 
-    ul li{
+    #curiosidades ul li{
         list-style-type: none;
         list-style-image: url(multimidia/ossinho.png);
         list-style-position: inside;
         margin: 30px 0;
     }
 
-    dt {
+    #curiosidades dt {
         color: #fff;
         background-color: #c0262c;
         padding: 7px;
@@ -52,7 +56,7 @@
     }
 
 
-    dd{
+    #curiosidades dd{
         border: thin #c0262c solid;
         border-radius: 0 0 25px 25px;
         margin-top: -3px;
@@ -60,21 +64,21 @@
         padding: 20px 20px 0;
     }
 
-    ol{
+    #curiosidades ol{
         list-style-type: none;
         white-space: pre;
         line-height: .9em;
         counter-reset: contador;
     }
 
-    ol li:before{
+    #curiosidades ol li:before{
         color: #999999;
         counter-increment: contador;
         content: "Questão " counter(contador)": ";
 
     }
 
-    ul li a{
+    #curiosidades ul li a{
         text-decoration: none;
         color: #c0262c;
         font-weight: bold;
@@ -82,11 +86,11 @@
 
     }
 
-    ul li a:hover{
+    #curiosidades ul li a:hover{
         text-decoration: underline;
     }
 
-    dd a[target="_blank"]{
+    #curiosidades dd a[target="_blank"]{
     text-decoration: none;
     color: #c0262c;
     font-weight: bold;
@@ -96,12 +100,12 @@
 
     }
 
-    dd a[target="_blank"]:hover{
+    #curiosidades dd a[target="_blank"]:hover{
 
         text-decoration: underline;
     }
 
-    dd a[href="#top"]{
+    #curiosidades dd a[href="#top"]{
 
         text-decoration: none;
         color: #c0262c;
@@ -110,13 +114,13 @@
         background: url(multimidia/seta-voltar.png) no-repeat left center;
     }
 
-    dd a[href="#top"]:hover{
+    #curiosidades dd a[href="#top"]:hover{
 
         text-decoration: underline;
         background: url(multimidia/seta-voltar-hover.png) no-repeat left center;
     }
 
-    h1{
+    #curiosidades h1{
         color: #c0262c;
         font-size: 2.5em;
         border-bottom: #c0262c solid thin;
@@ -129,7 +133,7 @@
 
 
 
-<body>
+<body id="curiosidades">
 
 
 <a href="index.html">Home</a>
