--- a/projetopetshop/obrigado.html
+++ b/projetopetshop/obrigado.html
@@ -4,10 +4,15 @@
 <html lang="pt-br">
 
 <head>
+
 <meta charset="utf-8">
 
 <title>Obrigado - Meu amigo cão</title>
 
+<link href="estilo.css" rel="stylesheet" type="text/css">
+
+
+<script src="interacao/html5shiv.min.js"></script>
 
 </head>
 
@@ -16,7 +21,7 @@
 <body> 
 
 
-
+<main>
 <p>
 <a href="index.html">Home</a></p>
 
@@ -30,7 +35,27 @@
 <p>Nossa equipe irá conferir sua solicitação e enviará uma confirmação para seu email.</p>
 
 
-<p>&nbsp;</p>
+<p>Aproveite agora mesmo a nossa dica em destaque:</p>
+<div id="destaqueObrigado">
+<div id="lacinho"> <img src="multimidia/lacinho.png" alt="lacinho"/></div>
+<p><img src="multimidia/anuncio_pet3.jpg" alt="anúncio pet"/>
+
+Lorem ipsum dolor sit amet, <br>
+
+consectetur adipiscing elit. Aliquam fringilla lacinia ultricies. Nam elit lectus, interdum eu dictum et, hendrerit in tellus. Fusce tempor fringilla massa vitae consequat. Vivamus aliquet, neque sed tempus rhoncus, nisl turpis malesuada ipsum, vel imperdiet arcu mauris ut metus. </p>
+
+
+<p>Aliquam luctus venenatis porttitor. Vivamus vitae aliquam arcu, sed auctor lacus. Fusce placerat, odio at congue suscipit, lectus purus accumsan justo, at dapibus tortor risus nec libero. Nullam orci arcu, lacinia dignissim diam et, adipiscing tempus velit. Vivamus nec interdum sem, ac ullamcorper arcu. </p>
+
+
+<p>Morbi risus diam, cursus ac dapibus sit amet, feugiat vitae mauris.</p>
+
+</div>
+</main>
+
+<footer>
+<p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 
 
 </body>
