--- a/projetopetshop/produtos.html
+++ b/projetopetshop/produtos.html
@@ -5,135 +5,140 @@
 
 <head>
 
-    <meta charset="utf-8">
+<meta charset="utf-8">
 
-    <title>Produtos - Meu amigo cão</title>
-    <link href="estilo.css" rel="stylesheet" type="text/css">
+<title>Produtos - Meu amigo cão</title>
 
+
+<script src="interacao/html5shiv.min.js"></script>
+<link href="estilo.css" rel="stylesheet" type="text/css">
 </head>
 
 
 
 
 <body id="produtos">
-    <p><a href="index.html">Home</a></p>
-    <main>
+<p><a href="index.html">Home</a></p>
+<main>
 
-        <table>
+<table>
 
-            <caption>Produtos</caption>
+<caption>Produtos</caption>
 
 
-            <tr>
 
-                <th>Porte</th>
+<tr>
 
-                <th colspan="2">Marca</th>
+<th>Porte</th>
 
-                <th>Preço</th>
+<th colspan="2">Marca</th>
 
-            </tr>
+<th>Preço</th>
 
+</tr>
 
 
-            <tr>
 
-                <td rowspan="2">Pequeno</td>
+<tr> 
 
-                <td>Vestibulum</td>
+<td rowspan="2">Pequeno</td>
 
-                <td> <img src="multimidia/pq_emb_pequeno1.png" alt="ração cão pequeno"> </td>
+<td>Vestibulum</td>
 
-                <td> R$ 5,00</td>
+<td> <img src="multimidia/pq_emb_pequeno1.png" alt="ração cão pequeno"> </td>
 
-            </tr>
+<td> R$ 5,00</td>
 
+</tr>
 
 
-            <tr>
 
+<tr>
 
-                <td>Nunc</td>
 
-                <td> <img src="multimidia/pq_emb_pequeno2.png" alt="ração cão pequeno"> </td>
+<td>Nunc</td> 
 
-                <td> R$ 4,80</td>
+<td> <img src="multimidia/pq_emb_pequeno2.png" alt="ração cão pequeno"> </td>
 
-            </tr>
+<td> R$ 4,80</td>
 
+</tr>
 
 
-            <tr>
 
-                <td rowspan="2">Médio</td>
+<tr> 
 
-                <td>Mollis</td>
+<td rowspan="2">Médio</td> 
 
-                <td> <img src="multimidia/pq_emb_medio1.png" alt="ração cão médio"> </td>
+<td>Mollis</td> 
 
-                <td> R$ 6,90</td>
+<td> <img src="multimidia/pq_emb_medio1.png" alt="ração cão médio"> </td>
 
-            </tr>
+<td> R$ 6,90</td>
 
+</tr>
 
 
-            <tr>
 
+<tr>
 
-                <td>Porttitor</td>
 
-                <td> <img src="multimidia/pq_emb_medio2.png" alt="ração cão médio"> </td>
+<td>Porttitor</td>
 
-                <td> R$ 3,90</td>
+<td> <img src="multimidia/pq_emb_medio2.png" alt="ração cão médio"> </td>
 
-            </tr>
+<td> R$ 3,90</td>
 
+</tr>
 
 
-            <tr>
-                <td rowspan="2">Grande</td>
 
-                <td>Lacinia</td>
+<tr> 
+<td rowspan="2">Grande</td> 
 
-                <td> <img src="multimidia/pq_emb_grande1.png" alt="ração cão grande"> </td>
+<td>Lacinia</td> 
 
-                <td> R$ 6,90</td>
+<td> <img src="multimidia/pq_emb_grande1.png" alt="ração cão grande"> </td>
 
-            </tr>
+<td> R$ 6,90</td>
 
+</tr>
 
 
-            <tr>
 
-                <td>Sapien</td>
+<tr>
 
-                <td> <img src="multimidia/pq_emb_grande2.png" alt="ração cão grande"> </td>
+<td>Sapien</td>
 
-                <td> R$ 3,90</td>
+<td> <img src="multimidia/pq_emb_grande2.png" alt="ração cão grande"> </td>
 
-            </tr>
+<td> R$ 3,90</td>
 
+</tr>
 
 
-            <tr>
 
-                <td colspan="4">
-                    Consulte nossos preços para grandes quantidades.
-                </td>
+<tr>
 
-            </tr>
+<td colspan="4">
+Consulte nossos preços para grandes quantidades.
+</td>
 
+</tr>	
 
 
-        </table>
 
+</table>
 
-    </main>
 
-    <footer>
-        <p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
-    </footer>
+</main>
+
+<footer>
+<p>Atendimento: atendimento@meuamigocaopetshop.com • (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
 
 </body>
 
 </html>
+
+
