--- a/projetopetshop/index.html
+++ b/projetopetshop/index.html
@@ -1,15 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+
+<html lang="pt-br">
+
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PETSHOP</title>
 
-        <!-- Interligar o arquivo HTML com o de ESTILO(CSS) -->
-    <link rel="stylesheet" href="estilo.css" type="text/css">
+<meta charset="utf-8">
 
+<title>Meu amigo cão - Petshop</title>
+
+<script src="interacao/html5shiv.min.js"></script>
+<link href="estilo.css" rel="stylesheet" type="text/css">
 </head>
+
+
+
+
+<body id="inicial">
+
+
+<header>
+
+<h1>Meu amigo cão - Petshop</h1>
+
+<div id="anuncio">
+<img src="multimidia/anuncio-cantinho-feliz-h.jpg" alt="anúncio - cantinho feliz, hotel para cachorro">
+</div>
 <body>
-    
+
+
+<section>
+
+<p><a href="boletim.html">Assine o boletim mensal</a></p>
+
+<p>nos acompanhe: </p>
+<figure>
+<a href="#"><img src="multimidia/ms-facebook.gif" alt="facebook"></a> 
+<a href="#"><img src="multimidia/ms-twitter.gif" alt="twitter"></a> 
+<a href="#"><img src="multimidia/ms-youtube.gif" alt="youtube"></a> 
+<a href="#"><img src="multimidia/ms-pinterest.gif" alt="pinterest"></a> 
+<a href="#"><img src="multimidia/ms-gmais.gif" alt="google mais"></a>
+</figure>
+
+</section>
+
+</header>
+
+<nav>
+
+<ul>
+
+<li><a href="index.html">Home</a></li>
+
+<li><a href="quem-somos.html">Quem somos</a></li>
+
+<li><a href="produtos.html">Produtos</a></li>
+
+<li><a href="banho-e-tosa.html">Banho e Tosa</a></li>
+
+<li><a href="curiosidades.html">Curiosidades</a></li>
+
+</ul>
+
+</nav>
+
+<aside>
+
+<img src="multimidia/anuncio_pet1.jpg" alt="anúncio">
+
+</aside>
+
+
+
+
+<main>
+
+<img src="multimidia/anime-index.jpg"alt="anime"/>
+
+<h1>O melhor para o nosso amigo cão</h1>
+
+<p>Quisque venenatis urna ac nulla. Maecenas quis turpis nec nulla auctor mattis. Curabitur mi libero, scelerisque eu, cursus semper, tempor quis, ante. Etiam iaculis, nisl eu imperdiet tincidunt, neque lacus ornare leo, non ultrices arcu justo ut enim. Morbi pulvinar sagittis sapien. Sed adipiscing purus nec tortor. Cras nisi sapien, ultricies nec, dapibus ut, vehicula ac, pede. Donec venenatis lorem sit amet erat vehicula hendrerit. In convallis odio id augue. Sed nunc. Donec id tellus nec urna placerat consectetuer. Maecenas eget metus. Etiam et risus. Cras nunc mi, aliquam semper, suscipit a, dictum elementum, velit. Curabitur</p>
+
+</main>
+
+
+
+<aside>
+<img src="multimidia/anuncio_pet2.jpg" alt="anúncio">
+</aside>
+
+<footer>
+<p>Atendimento: 
+<a href="mailto:atendimento@meuamigocaopetshop.com">
+atendimento@meuamigocaopetshop.com</a>  
+ - (0XX) 99999-9999 / (0XX) 88888-8888</p>
+</footer>
+
+
 </body>
+
+
 </html>
+
+
