--- a/Livro Novo HTML e CSS/CSS/Atividade 1/basico.html
+++ b/Livro Novo HTML e CSS/CSS/Atividade 1/basico.html
@@ -6,9 +6,12 @@
 		<style>
 		/* Um comentário CSS */
 		.destaque{
-		    color: #b73011;
-			font-family: Arial, Arial, Helvetica, sans-serif;
+		    color: #b73011; /* Insere a cor azul na classe que foi criada, chamada destaque*/
+			font-family: Arial, Arial, Helvetica, sans-serif;   /* Adiciona uma família de fontes, para caso uma esteja indisponível, utilizar a outra */ 
 		}
+
+
+		
 		</style>
 	</head>
 	<body>
