--- a/Livro Novo HTML e CSS/CSS/Atividade 5/responsivo.html
+++ b/Livro Novo HTML e CSS/CSS/Atividade 5/responsivo.html
@@ -28,7 +28,7 @@
 						</a>
                         <div class="overlay" style="background-image: url("recursos/rock_c.jpeg");"></div>
                         <div class="clip">
-                            <a href="display.html" class="close" title="fechar">X</a>    
+                            <a href="responsivo.html" class="close" title="fechar">X</a>    
 							<img src="recursos/rock_c.jpeg" alt=""/>
 							<div class="info">
 								<div class="artista">Red Hot Chili Peppers</div>
@@ -47,7 +47,7 @@
 					</a>
                     <div class="overlay"></div>
 					<div class="clip">
-                        <a href="display.html" class="close" title="fechar">X</a>    
+                        <a href="responsivo.html" class="close" title="fechar">X</a>    
 						<img src="recursos/rock_b.jpeg" alt=""/>
 						<div class="info">
 							<div class="artista">Alanis Morissette</div>
@@ -65,7 +65,7 @@
 					</a>
                     <div class="overlay"></div>
 					<div class="clip">
-                        <a href="display.html" class="close" title="fechar">X</a>    
+                        <a href="responsivo.html" class="close" title="fechar">X</a>    
 						<img src="recursos/rock_b.jpeg" alt=""/>
 						<div class="info">
 							<div class="artista">Alanis Morissette</div>
@@ -83,7 +83,7 @@
 					</a>
                     <div class="overlay"></div>
 					<div class="clip">
-                        <a href="display.html" class="close" title="fechar">X</a>    
+                        <a href="responsivo.html" class="close" title="fechar">X</a>    
 						<img src="recursos/rock_b.jpeg" alt=""/>
 						<div class="info">
 							<div class="artista">Alanis Morissette</div>
@@ -101,7 +101,7 @@
 					</a>
                     <div class="overlay"></div>
 					<div class="clip">
-                        <a href="display.html" class="close" title="fechar">X</a>    
+                        <a href="responsivo.html" class="close" title="fechar">X</a>    
 						<img src="recursos/rock_c.jpeg" alt=""/>
 						<div class="info">
 							<div class="artista">Supercombo</div>
