--- a/Livro Novo HTML e CSS/CSS/Atividade 1/index.html
+++ b/Livro Novo HTML e CSS/CSS/Atividade 1/index.html
@@ -51,7 +51,7 @@
             </li>
             <li style="color:red;">
                 <input type="checkbox" /> 
-                <p>Leve para assar em forno médio 180 °C) preaquecido por 40 minutos.</p>
+                <p>Leve para assar em forno médio 180 °C preaquecido por 40 minutos.</p>
             </li>
         </ol>
 	</body>
